# tsmetrics

./: Cargo.toml  README.md  RELEASE_FIX.txt  RENAME_SUMMARY.txt
.github/workflows/: release.yml
docs/: cli.html  configuration.html  getting-started.html  index.html  output-formats.html  sitemap.xml  style.css
docs/metrics/: cbo.html  closure-depth.html  component-responsibility.html  cyclomatic.html  dit.html  effect-density.html  function-coupling.html  halstead.html  hook-cohesion.html  hook-complexity.html  index.html  jsx-nesting.html  long-param-list.html  maintainability.html  module-cohesion.html  noi.html  nom.html  prop-drilling.html  pure-function-ratio.html  render-complexity.html  rfc.html  tcc.html  technical-debt.html  used-components.html  wmc.html  woc.html
docs/strategies/: brain-method.html  feature-envy.html  god-class.html  index.html  refused-bequest.html
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/scripts/: publish.sh
npm/tsm-cli/: package.json
npm/tsmetrics/: install.js  package.json
npm/win32-x64/: package.json
src/: lib.rs  main.rs
src/config/: mod.rs
src/metrics/: mod.rs
src/metrics/class/: cbo.rs  dit.rs  mod.rs  noi.rs  nom.rs  rfc.rs  tcc.rs  wmc.rs  woc.rs
src/metrics/file/: mod.rs  technical_debt.rs
src/metrics/function/: closure_depth.rs  cyclo.rs  halstead.rs  loc.rs  long_param_list.rs  maintainability.rs  mod.rs  nesting.rs  params.rs
src/metrics/module/: cohesion.rs  coupling.rs  mod.rs  purity.rs
src/output/: mod.rs
src/parse/: mod.rs
src/strategies/: brain_method.rs  data_class.rs  feature_envy.rs  god_class.rs  mod.rs  refused_bequest.rs
src/structs/: mod.rs
src/thresholds/: mod.rs
src/utils/: mod.rs
(+9 files in other folders)
