[package]
name = "ts-static-analyzer"
version = "0.1.0"
edition = "2021"
description = "TypeScript Static Analyzer - A static analysis tool for TypeScript using tree-sitter"
license = "MIT"

[[bin]]
name = "ts-static-analyzer"
path = "src/main.rs"

[dependencies]
# TypeScript parsing via tree-sitter
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"

# CLI argument parsing
clap = { version = "4.6", features = ["derive"] }

# Serialization — pinned to last known-safe versions before serde 1.0.220+
# introduced `serde_core` and serde_json 1.0.140+ introduced `zmij`,
# neither of which exist in the official upstream crate graphs.
# Revisit after the upstream supply-chain incident is fully resolved.
serde = { version = ">=1.0, <1.0.220", features = ["derive"] }
serde_json = ">=1.0, <1.0.140"
serde_yaml = "0.9"

# Output formatting
comfy-table = "7.2"

# Error handling
anyhow = "1.0"

# File handling
walkdir = "2.5"

# Parallel processing
rayon = "1.11"

[dev-dependencies]
approx = "0.5"
tempfile = "3"
